--- a/Views/Weekly_report/Index.cshtml
+++ b/Views/Weekly_report/Index.cshtml
@@ -99,9 +99,9 @@
                     @Html.DisplayFor(modelItem => item.Weekly_report.Id)
                 </td>
                 <td>
-                    <a asp-controller="Goals" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-controller="Goals" asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-controller="Goals" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-controller="TransportUsages" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-controller="TransportUsages" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-controller="TransportUsages" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
@@ -109,3 +109,34 @@
 </table>
 
 
+<h1>Index</h1>
+
+<p>
+    <a asp-controller="Goals" asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <tbody>
+        @foreach (var item in Model.Consumers)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TransportUsageId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GoalId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SuggestionId)
+                </td>
+                <td>
+                    <a asp-controller="Consumers" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-controller="Consumers" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-controller="Consumers" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
