Voortgang toegankelijk gemaakt

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Duurzaamheidsopties </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Weekly_report" asp-action="Index">Voortgang</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Voortgang" asp-action="Index">Voortgang</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
