--- a/Views/Weekly_report/Index.cshtml
+++ b/Views/Weekly_report/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>weekly report Index</h1>
  
 <p>
     <a asp-action="Create">Create New</a>
@@ -42,7 +42,7 @@
 
 
 
-<h1>Index</h1>
+<h1>goals Index</h1>
 
 <p>
     <a asp-controller="Goals" asp-action="Create">Create New</a>
@@ -76,10 +76,10 @@
 
 
 
-<h1>Index</h1>
+<h1>transportusage Index</h1>
 
 <p>
-    <a asp-controller="TransportUsages" asp-action="Create">Create New</a>
+    <a asp-controller="Goals" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <tbody>
@@ -109,10 +109,10 @@
 </table>
 
 
-<h1>Index</h1>
+<h1>consumers Index</h1>
 
 <p>
-    <a asp-controller="Consumers" asp-action="Create">Create New</a>
+    <a asp-controller="Goals" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <tbody>
@@ -140,3 +140,5 @@
         }
     </tbody>
 </table>
+
+                    
