--- a/Views/Goals/Index.cshtml
+++ b/Views/Goals/Index.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewData["Title"] = "Index";
 }
+<head>
+    <script>
+        window.location.href = "../voortgang";
+    </script>
+</head>
 
 <h1>Index</h1>
 
