--- a/Views/Goals/Edit.cshtml
+++ b/Views/Goals/Edit.cshtml
@@ -11,7 +11,7 @@
         <form asp-action="Edit">
             <h4>
             <p>Doel: @Html.DisplayFor(modelItem => Model.Personalgoal)</p>
-            <p>Uitstoot: @Html.DisplayFor(modelItem => Model.Impact)</p>
+                <p>Uitstoot: @Html.DisplayFor(modelItem => Model.Impact) gram CO2 per kilometer</p>
             </h4>
 
             <button class="btn btn-success" id="completeButton">
