--- a/Views/Voortgang/Index.cshtml
+++ b/Views/Voortgang/Index.cshtml
@@ -10,11 +10,14 @@
 <p>Start door nieuwe doelen te creëren of je voortgang te beheren voor bestaande doelen. Daarnaast kun je je vervoersgegevens invoeren en beheren om inzicht te krijgen in je milieubijdrage.</p>
 <p>Gebruik de beschikbare opties in het menu om aan de slag te gaan. Veel succes!</p>
 
-
+<br />
+<br />
+<br />
+<br />
 <!-- Doelen (Goals) -->
-<h1>goals Index</h1>
+<h1>Persoonlijke doelen <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1171509516702076948/image.png?ex=655cf042&is=654a7b42&hm=faebbc99e72bdf4e8cb3ec6aec0c46222df1081a040edde0b5d338ec8bcd83fc&" width="50" height="50"/></h1>
 <p>
-    <button type="button" class="btn btn-success" onclick="window.location.href='../Goals/create'">Maak nieuw doel</button>
+    <button type="button" class="btn btn-success" onclick="window.location.href='../Goals/create'">Maak nieuw doel <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1171510673054908528/image.png?ex=655cf156&is=654a7c56&hm=1f5588f69cfbcd5690a361550ee1f6b21272db86cec6de812a62ac54c1a1fda0&" width="30" height="30" /></button>
 </p>
 <table class="table">
     <tbody>
