kleine aanpassingen aan index van voortgang

--- a/Views/Voortgang/Index.cshtml
+++ b/Views/Voortgang/Index.cshtml
@@ -9,6 +9,7 @@
 <p>Op deze pagina kun je jouw persoonlijke doelen creëren en bijhouden, evenals je vervoersgebruik bijhouden.</p>
 <p>Start door nieuwe doelen te creëren of je voortgang te beheren voor bestaande doelen. Daarnaast kun je je vervoersgegevens invoeren en beheren om inzicht te krijgen in je milieubijdrage.</p>
 <p>Gebruik de beschikbare opties in het menu om aan de slag te gaan. Veel succes!</p>
+<b>Lukt het niet om doelen aan te maken/ transport gebruik vastleggen? druk dan op <a asp-controller="Consumers" asp-action="Create">Deze link</a></b>
 
 <br />
 <br />
@@ -55,12 +56,15 @@
     </tbody>
 </table>
 
-
+<br />
+<br />
+<br />
+<br />
 <h1>weekly report Index</h1>
 
 <!-- Wekelijkse Rapporten -->
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Weekly_report" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <tbody>
