--- a/Views/Weekly_report/Index.cshtml
+++ b/Views/Weekly_report/Index.cshtml
@@ -42,7 +42,7 @@
 
 
 
-<h1>goals Index</h1>
+@*<h1>goals Index</h1>
 
 <p>
     <a asp-controller="Goals" asp-action="Create">Create New</a>
@@ -141,4 +141,4 @@
     </tbody>
 </table>
 
-                    
+                    *@
