--- a/Views/Goals/Delete.cshtml
+++ b/Views/Goals/Delete.cshtml
@@ -43,7 +43,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-success" /> 
+        <input type="submit" value="Verwijder" class="btn btn-success" /> 
         <button type="button" class="btn btn-danger" onclick="window.location.href='https://localhost:7138/Voortgang'">Anuleer</button>
 
         
