--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BioWiseV2.styles.css" asp-append-version="true" />
 </head>
+<style>
+    body {
+        font-family: 'Trebuchet MS', sans-serif;
+    }
+</style>
 <body>
-
+    
     
         @*        <nav class="navbar navbar-expand-lg bg-black" data-bs-theme="dark">
         <div class="container-fluid">
