--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -49,6 +49,11 @@
                 <span asp-validation-for="QualityMark_link" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Market_link" class="control-label"></label>
+                <input asp-for="Market_link" class="form-control" />
+                <span asp-validation-for="Market_link" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Suggestion_Id" class="control-label"></label>
                 <input asp-for="Suggestion_Id" class="form-control" />
                 <span asp-validation-for="Suggestion_Id" class="text-danger"></span>
