--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -181,4 +181,8 @@
             });
         }
     });
+
+    // Functie om het aantal sterren te berekenen op basis van de score
+    
+
 </script>
