--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -441,7 +441,7 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide3" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper"></div>
                 <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
-                    <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1171799697279692840/image.png?ex=655dfe82&is=654b8982&hm=d39ee642532ed1a57a9597840956c05c6f6225d6d9aab0bcfdeb700bd0dcda13&0" style="align-content:center" height="450" width="1200"/>
+                    <img src="https://cdn.discordapp.com/attachments/1026794877624799252/1172115133422649434/image.png?ex=655f2448&is=654caf48&hm=8d5fe70c8f1c5f457078670a7fac06f7608d947450808b0a7fdc073da08b7745&" style="align-content:center" height="550" width="1000"/>
                     </div>
                 <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
                 <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
@@ -449,9 +449,7 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide4" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper"></div>
                 <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
-                    <div class="card-body">
-                        <h1>pagina 4</h1>
-                    </div>
+                    <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1172117205723381841/image.png?ex=655f2636&is=654cb136&hm=2a563cdf10e4fc4842cebcc19d20d2eead97a58f4ab833ae30cd67cfd74edfd4&" style="align-content:center" height="550" width="1000"/>
                     </div>
                 <a href="#carousel__slide3" class="carousel__prev">Go to previous slide</a>
                 <a href="#carousel__slide1" class="carousel__next">Go to first slide</a>
