voortgang pagina weelky_report layout

--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -49,13 +49,13 @@
 <body>
     <img src="https://cdn.discordapp.com/attachments/1151428021341925472/1168502428694491247/image.png?ex=6551ffb0&is=653f8ab0&hm=a5fc1372794597f3328269153235a0583304ef434cb1c8b04420f438d5e3c74d&" style="width: 80%" class="center">
     <form asp-controller="Products" asp-action="Index" method="get" class="d-flex center">
-        @*<button class="nav-link dropdown-toggle btn btn-white my-2 my-sm-0" style="color: grey; border-color:grey" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+        <button class="nav-link dropdown-toggle btn btn-white my-2 my-sm-0" style="color: grey; border-color:grey" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</button>
         <div style="color: grey; border-color:grey" class="dropdown-menu">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
             <a class("dropdown-item" href="#">Something else here</a>
             <div class("dropdown-divider"></div>
-            <a class("dropdown-item" href="#">Separated link</a>*@
+            <a class("dropdown-item" href="#">Separated link</a>
         </div>
         <input id="SearchString" class="form-control me-sm-2" style="color: grey; border-color:grey;" type="text" name="SearchString" placeholder="Search" value="@searchString" width="300">
         <button id="searchbutton" class="btn btn-white my-2 my-sm-0" style="color: grey; border-color:grey" type="submit">
