--- a/Views/TransportUsages/Edit.cshtml
+++ b/Views/TransportUsages/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="Transport_type" class="control-label"></label>
+                <input asp-for="Transport_type" class="form-control" />
+                <span asp-validation-for="Transport_type" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Distance" class="control-label"></label>
                 <input asp-for="Distance" class="form-control" />
                 <span asp-validation-for="Distance" class="text-danger"></span>
