--- a/Views/TransportUsages/Index.cshtml
+++ b/Views/TransportUsages/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Transport_type)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Distance)
             </th>
             <th>
@@ -30,6 +33,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Transport_type)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Distance)
             </td>
